qtsensors-opensource-src (5.2.1+dfsg-3) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Use dh_auto_test to run the tests.
  * Remove dh_builddeb override, xz is now the default compression method.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 27 Feb 2014 15:12:39 +0400

qtsensors-opensource-src (5.2.1+dfsg-2) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * Build documentation packages (closes: #737712).
  * Properly clean the build.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Add Build-Depends-Indep with libqt5sql5-sqlite and qttools5-dev-tools to be
    able to build the doc.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 25 Feb 2014 15:03:18 -0300

qtsensors-opensource-src (5.2.1+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build dependencies.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 16 Feb 2014 18:33:42 -0300

qtsensors-opensource-src (5.2.0+dfsg-3) unstable; urgency=medium

  * Upload to unstable.
  * Move mkspec files to their new location.
    - B-D on qtbase5-private-dev 5.2.0+dfsg-7 which changed the location.
  * Update Standards-Version to 3.9.5, no changes required.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 31 Jan 2014 20:45:12 -0300

qtsensors-opensource-src (5.2.0+dfsg-2) experimental; urgency=low

  [ Dmitry Shachnev ]
  * Fix typo in the previous changelog entry.
  * Install libqtsensors_linuxsys.so only on Linux.

  [ Pino Toscano ]
  * Do not install the private qmake stuff.
  * Remove the Pre-Depends on dpkg >= 1.15.6~, since that version is available
    in Squeeze already.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Move mkspec files to their new location.
    - B-D on qtbase5-private-dev 5.2.0+dfsg-7 which changed the location.
  * Update Standards-Version to 3.9.5, no changes required.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 26 Dec 2013 15:18:42 -0300
